--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,25 @@
-body {
+body, html {
+  height: 100%;
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.bg {
+  /* The image used */
+  background-image: url("./images/nino-tomando-foto.jpg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.cuadrado {
+  width:25%;
+  max-width:100px;
+  height:0;
+  padding-top:25%;
+  position:relative;
+  background:red;
 }
